@@ -121,6 +121,7 @@ vpr::ReturnStatus SocketStreamImplBSD::accept(SocketStreamImplBSD& sock,vpr::Int
          sock.setRemoteAddr(addr);
          sock.mHandle         = new FileHandleImplUNIX(addr.getAddressString());
          sock.mHandle->mFdesc = accept_sock;
+         sock.mHandle->mOpen  = true;
          sock.mOpen           = true;
 
          // Inherit the blocking state from the accepting socket.  This
